--- a/Contact.html
+++ b/Contact.html
@@ -87,8 +87,7 @@
     </section>
     <section class="skrollable u-clearfix u-container-align-center-xs u-image u-parallax u-section-3" id="sec-66d4">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
-        <h2 class="u-align-center-xs u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="2000" data-animation-delay="0"> Transform your space with our magic</h2>
-        <p class="u-align-center-xs u-text u-text-2">Sample text. Click to select the Text Element.</p>
+        <h2 class="u-align-center-xs u-text u-text-1"> Transform your space with our magic</h2>
         <div class="u-form u-form-1">
           <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-horizontal u-form-spacing-10 u-inner-form" source="email" name="form" style="padding: 0px;">
             <div class="u-form-email u-form-group u-label-none">
