--- a/index.html
+++ b/index.html
@@ -111,19 +111,14 @@
       <div class="u-clearfix u-sheet u-valign-middle-lg u-sheet-1">
         <h2 class="u-align-center-xs u-text u-text-1"> Transform your space with our magic</h2>
         <div class="u-form u-form-1">
-          <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-horizontal u-form-spacing-10 u-inner-form" source="email" name="form" style="padding: 0px;">
+          <form action="send_email.php" method="post" class="u-clearfix u-form-horizontal u-form-spacing-10 u-inner-form" style="padding: 0px;">
             <div class="u-form-email u-form-group u-label-none">
               <label for="email-ec54" class="u-label">Email</label>
               <input type="email" placeholder="Enter a valid email address" id="email-ec54" name="email" class="u-border-none u-input u-input-rectangle u-radius u-input-1" required="">
             </div>
             <div class="u-align-left u-form-group u-form-submit u-label-none">
-              <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-palette-3-base u-btn-1">Submit</a>
-              <input type="submit" value="submit" class="u-form-control-hidden">
+              <button type="submit" class="u-border-none u-btn u-btn-submit u-button-style u-palette-3-base u-btn-1">Submit</button>
             </div>
-            <div class="u-form-send-message u-form-send-success">Thank you! Your message has been sent.</div>
-            <div class="u-form-send-error u-form-send-message">Unable to send your message. Please fix errors then try again.</div>
-            <input type="hidden" value="" name="recaptchaResponse">
-            <input type="hidden" name="formServices" value="">
           </form>
         </div>
       </div>
