--- a/index.html
+++ b/index.html
@@ -111,8 +111,15 @@
       <div class="u-clearfix u-sheet u-valign-middle-lg u-sheet-1">
         <h2 class="u-align-center-xs u-text u-text-1"> Transform your space with our magic</h2>
         <div class="u-form u-form-1">
-          <!-- Embed Google Form -->
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdFTx3cOe89KNYirMdC-iYisE7WaNcNs0FPLhAurWkoUjgE7A/viewform?embedded=true" width="640" height="480" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+          <form action="send_email.php" method="POST" class="u-clearfix u-form-horizontal u-form-spacing-10 u-inner-form" style="padding: 0px;">Add commentMore actions
+            <div class="u-form-email u-form-group u-label-none">
+              <label for="email-index" class="u-label">Email</label>
+              <input type="email" placeholder="Enter a valid email address" id="email-index" name="email" class="u-border-none u-input u-input-rectangle u-radius u-input-1" required="">
+            </div>
+            <div class="u-align-left u-form-group u-form-submit u-label-none">
+              <button type="submit" class="u-border-none u-btn u-btn-submit u-button-style u-palette-3-base u-btn-1">Submit</button>
+            </div>
+          </form>
         </div>
       </div>
     </section>
