--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div class="u-clearfix u-sheet u-valign-middle-lg u-sheet-1">
         <h2 class="u-align-center-xs u-text u-text-1"> Transform your space with our magic</h2>
         <div class="u-form u-form-1">
-          <form action="send_email.php" method="POST" class="u-clearfix u-form-horizontal u-form-spacing-10 u-inner-form" style="padding: 0px;">Add commentMore actions
+          <form action="send_email.php" method="POST" class="u-clearfix u-form-horizontal u-form-spacing-10 u-inner-form" style="padding: 0px;">
             <div class="u-form-email u-form-group u-label-none">
               <label for="email-index" class="u-label">Email</label>
               <input type="email" placeholder="Enter a valid email address" id="email-index" name="email" class="u-border-none u-input u-input-rectangle u-radius u-input-1" required="">
